<resources>
    <string name="app_name">BrandStore</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="it_is_favourite_fragment">It is Favourite Fragment</string>
    <string name="it_is_home_fragment">It is Home Fragment</string>
    <string name="it_is_settings_fragment">It is Settings Fragment</string>
    <string name="log_out">Log Out</string>
    <string name="home">HomeFragment</string>
    <string name="more">More</string>
    <string name="about">About</string>
    <string name="it_is_about_fragment">It is About Fragment</string>
    <string name="history">History</string>
    <string name="it_is_history_fragment">It is History Fragment</string>
    <string name="basket">Basket</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sing_up">Don\'t have an account? Sing Up</string>
    <string name="have_an_account_sing_in">Have an account? Sing In</string>
    <string name="register">register</string>
    <string name="create_a_new_password">Please enter your phone number</string>
    <string name="create_a_new_login">Please enter your phone number</string>
    <string name="it_is_basket_fragment">It is Basket Fragment</string>
    <string name="kg_phone_code">+996</string>
    <string name="btn_add">Добавить</string>
    <string name="name">name</string>
    <string name="over_price">Over Price</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete?</string>
    <string name="delete_this">Are you sure want to delete this?</string>
    <string name="btn_order">Заказать</string>
    <string name="address_dev">Address to delivery</string>
    <string name="total_price">Итого</string>
    <string name="btn_ready">Готово</string>
    <string name="emty_basket_st">Sorry basket is empty!</string>
    <string name="btn_next_st">Next</string>
    <string name="deleted">Deleted</string>
    <string name="all_deleted">All files deleted</string>
    <string name="added">Added to Basket</string>
    <string name="it_is_order_fragment">It is Order Fragment</string>
    <string name="choose_address_delivery">"Choose your address to delivery "</string>
    <string name="call_to_nmber">Call to number</string>
    <string name="payment_takes_place_upon_receipt_of_the_goods">Payment takes place upon receipt of the goods.</string>
    <string name="total">Total:</string>
    <string name="currency">сом</string>
</resources>
